7.4.0

 * Update Django to 1.4.3
 * Update South to 0.7.6
 * Update django-crispy-forms to 1.2.3
 * Update django-extensions to 1.0.1
 * Update django-debug-toolbar to 0.9.4
 * Update webassets and django-assets to 0.8

 * Add attendee map for events

 * Fixed missing chart libraries

7.3.0

 * Add scheckin (Ajax powered check-in solution)
 * Improvements to the REST API
 * Improved administration of groups
 * Add group membership to user profile

Dependencies

 * Now requires Django 1.4.1

7.2.0

 * Remove htdigest notify module
 * Added initial implementation of REST API
 * Added a resend-emails function in sadmin for all attendees
 * Added package concept to option groups
     An option group declared as a package gives a discount if all options are selected
 * Improved login page with indications of access denied and remote login requests

Dependencies

 * Change django-uni-form to django-crispy-forms 1.1.4
 * Now supports (and requires) Django 1.4.0
 * Now requires south 1.7.5
 * Now requires debug-debug-toolbar 0.9.1
 * Now requires django-tastypie (API support)

7.1.1
 * Small bugfixes

7.1.0

 * Added a new direct url page type to sadmin
 * Added support for multiple payment registration forms in sadmin

7.0.0

Dependencies

 * Now supports (and requires) Django 1.3
 * Updated South to 0.7.3
 * Updaged django-debug-toolbar to 0.8.5
 * Updated django-tinymce to 1.5.1a2

Refactoring

 * Now using django.contrib.staticfiles - update MEDIA_ROOT et.al. accordingly

Options and option groups

 * Selections in an option group can be locked for all accepted attendees

SAdmin

 * Improved sadmin menu organisation
 * Various visual improvements

6.3.0

Vanilla Forum Integration:
 * Added support for default user roles
 * Added support for avatars and forum settings
 * Added support for synchronisation of user roles

6.2.0
 * Added categories for events
 * Various bugfixes

6.1.0
 * New login screen
 * New link directly from the event list to attendee list