@@ -1,5 +1,4 @@
-from selvbetjening.sadmin.base.sadmin import site
 
 from admins.event import EventAdmin
 
-site.register('events', EventAdmin)
+EventsRootAdmin = EventAdmin
